--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Lightning</string>
+    <string name="app_name">KidBox Browser</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Buscar en la Web</string>
@@ -33,7 +33,6 @@
     <string name="advanced">Ajustes avanzados</string>
     <string name="source">Código fuente</string>
     <string name="license">Licencia</string>
-    <string name="github">github.com/anthonycr/Lightning-Browser</string>
     <string name="apache">Apache License 2.0</string>
     <string name="title_activity_new_settings">NewSettings</string>
     <string name="action_settings">Ajustes</string>
