--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Lightning</string>
+    <string name="app_name">KidBox Browser</string>
     <string name="google">Google</string>
     <string name="settings">Tarayıcı ayarlarıstring</string>
     <string name="location">Konum erişimi</string>
@@ -23,7 +23,6 @@
     <string name="advanced">Gelişmiş Ayarlar</string>
     <string name="source">Kaynak kodu</string>
     <string name="license">Lisans</string>
-    <string name="github">github.com/anthonycr/Lightning-Browser</string>
     <string name="apache">Apache License 2.0</string>
     <string name="title_activity_new_settings">YeniAyarlar</string>
     <string name="version">Uygulama Versiyonu</string>
