--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
 
 <resources>
 
-    <string name="app_name">Lightning</string>
+    <string name="app_name">KidBox Browser</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Web search</string>
@@ -50,7 +50,6 @@
     <string name="advanced">Advanced Settings</string>
     <string name="source">Source Code</string>
     <string name="license">License</string>
-    <string name="github">github.com/anthonycr/Lightning-Browser</string>
     <string name="apache">Apache License 2.0</string>
     <string name="title_activity_new_settings">NewSettings</string>
     <string name="action_settings">Settings</string>
@@ -157,7 +156,6 @@
     <string name="google_suggestions">Search Suggestions</string>
     <string name="powered_by_google">Powered by Google</string>
     <string name="title_adblock">AdBlock</string>
-    <string name="message_adblock">AdBlock is currently only available in the browser\'s paid version, Lightning Browser+. It is available to download on Google Play.</string>
     <string name="enable_orbot">Enable Orbot</string>
     <string name="use_tor_prompt">It looks like you have Orbot installed. Do you want to use Tor?</string>
     <string name="install_orbot">Please install Orbot in order to proxy with Tor.</string>
